--- a/mentalChatbot/templates/signup.html
+++ b/mentalChatbot/templates/signup.html
@@ -23,12 +23,13 @@
         </div>
         <div class="right-panel">
             <h2>Create an account</h2>
-            <form id="signupForm" action="/signup" method="POST">
-                <input type="text" name="full_name" placeholder="Full Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-                <button type="submit">Create an account</button>
+            <form id="signupForm" action="{% url 'signup' %}" method="POST">
+                {% csrf_token %}
+                <input type="text" name="user_name" placeholder="Full Name" required>
+                <input type="email" name="user_email" placeholder="Your Email" required>
+                <input type="password" name="user_password1" placeholder="Password" required>
+                <input type="password" name="user_password2" placeholder="Confirm Password" required>
+                <a href="/login/"> <button type="submit">Create an account</button></a>
             </form>
             <p>Already have an account? <a href="/login">Login</a></p>
             <p id="message"></p>
