--- a/mentalChatbot/templates/index.html
+++ b/mentalChatbot/templates/index.html
@@ -43,8 +43,7 @@
 
       <div class="container position-relative d-flex align-items-center justify-content-end">
         <a href="index.html" class="logo d-flex align-items-center me-auto">
-          <img src="{% static 'assets/logo.jpg' %}" alt="">
-          <!-- Uncomment the line below if you also wish to use a text logo -->
+          <img src="{% static 'assets/img/logo1.png' %}" alt="">
            <h1 class="sitename">EduWell</h1>
         </a>
 
@@ -131,7 +130,7 @@
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
-              <div class="testimonial-item""="">
+              <div class="testimonial-item" >
 
             <p>
               <i class=" bi bi-quote quote-icon-left"></i>
@@ -141,7 +140,7 @@
                     Can a relationship really affect your mental health without you even noticing?.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">
+                <img src="{% static 'assets/img/testimonials/relationship2.JPG' %}" class="testimonial-img" alt="">
 
               </div>
             </div><!-- End testimonial item -->
@@ -156,7 +155,7 @@
                   How often do we forget that drug abuse isn’t just about the substance, but the pain it hides</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-2.jpg' %}" class="testimonial-img" alt="">
+                <img src="{% static 'assets/img/testimonials/drugs.jpg' %}" class="testimonial-img" alt="">
 
               </div>
             </div><!-- End testimonial item -->
@@ -170,7 +169,7 @@
                   </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-3.jpg' %}" class="testimonial-img" alt="">
+                <img src="{% static 'assets/img/testimonials/mental2 (1).JPG' %}" class="testimonial-img" alt="">
 
               </div>
             </div><!-- End testimonial item -->
@@ -184,7 +183,7 @@
                   </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-4.jpg' %}" class="testimonial-img" alt="">
+                <img src="{% static 'assets/img/testimonials/NoFinance.JPG' %}" class="testimonial-img" alt="">
 
               </div>
             </div><!-- End testimonial item -->
@@ -197,7 +196,7 @@
                       What if a disability only reveals different abilities</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-5.jpg' %}" class="testimonial-img" alt="">
+                <img src="{% static 'assets/img/testimonials/stop stigma.JPG' %}" class="testimonial-img" alt="">
 
               </div>
             </div><!-- End testimonial item -->
