--- a/mentalChatbot/templates/login.html
+++ b/mentalChatbot/templates/login.html
@@ -26,8 +26,7 @@
             <h2>Login</h2>
             <form id="signupForm" action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
-                <input type="email" name="email" placeholder="Your Email" required>
-                <input type="password" name="password" placeholder="Password" required>
+                {{ form.as_p }}
                 <button href="{% url 'homepage' %}" type="submit">Login</button>
             </form>
             <p>Create an account <a href="/signup/">Sign up</a></p>
