--- a/mentalChatbot/templates/signup.html
+++ b/mentalChatbot/templates/signup.html
@@ -36,10 +36,9 @@
             
             <form id="signupForm" action="{% url 'signup' %}" method="POST">
                 {% csrf_token %}
-                <input type="text" name="user_name" placeholder="Full Name" required>
-                <input type="email" name="user_email" placeholder="Your Email" required>
-                <input type="password" name="user_password1" placeholder="Password" required>
-                <input type="password" name="user_password2" placeholder="Confirm Password" required>
+
+                {{ form.as_p }}
+
                 <a href="/login/"> <button type="submit">Create an account</button></a>
             </form>
 
