--- a/mentalChatbot/templates/index.html
+++ b/mentalChatbot/templates/index.html
@@ -137,7 +137,9 @@
 
 
                 <span> <b style="color: red">Relationship</b> <br> How long can a toxic relationship go unnoticed before it starts affecting your mental health? <br>
-                    Can a relationship really affect your mental health without you even noticing?.</span>
+                    Can a relationship really affect your mental health without you even noticing?</span>
+                 <a href="{% url 'relationships' %}" class="stretched-link"> </a>
+
                 <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="{% static 'assets/img/testimonials/relationship2.JPG' %}" class="testimonial-img" alt="">
