--- a/mentalChatbot/templates/index.html
+++ b/mentalChatbot/templates/index.html
@@ -155,6 +155,8 @@
                   <i class="bi bi-quote quote-icon-left"></i>
                   <span> <b style="color: red">Drug Abuse & Addiction</b> <br>How many times have you told yourself you could quit, only to find the addiction still controlling you? <br>
                   How often do we forget that drug abuse isn’t just about the substance, but the pain it hides</span>
+                    <a href="{% url 'drugs' %}" class="stretched-link"> </a>
+
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="{% static 'assets/img/testimonials/drugs.jpg' %}" class="testimonial-img" alt="">
@@ -206,6 +208,7 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
+      </div>
 
 
     </section><!-- /Testimonials Section -->
@@ -761,7 +764,7 @@
 {#      </div>#}
 {##}
 {#    </section><!-- /Doctors Section -->#}
-{##}
+
 {#    <!-- Gallery Section -->#}
 {#    <section id="gallery" class="gallery section">#}
 {##}
