--- a/mentalChatbot/templates/index.html
+++ b/mentalChatbot/templates/index.html
@@ -170,6 +170,8 @@
                   <i class="bi bi-quote quote-icon-left"></i>
                   <span> <b style="color: red">Mental Illness</b> <br>What happens when we treat mental illness like it’s invisible, when in reality, it affects every part of our lives? <br>
                       How often do we forget that drug abuse isn’t just about the substance, but the pain it hides?
+                                          <a href="{% url 'mental_illness' %}" class="stretched-link"> </a>
+
                   </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
