--- a/mentalChatbot/templates/relationships.html
+++ b/mentalChatbot/templates/relationships.html
@@ -192,17 +192,16 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Doctors</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Articles</h2>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <div class="container ">
 
-        <div class="row gy-4">
+        <div class="  row gy-4 ">
 
-          <div class="col-lg-3 col-md-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="team-member">
-              <div class="member-img">
+          <div class="col-lg-3  col-md-1 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="team-member ">
+              <div class="member-img ">
                                    <a href="https://therelationshipfoundation.org/wp-content/uploads/2021/02/Healthy-Relationships-101-by-Michael-Jascz-published-by-the-relationship-foundation.pdf" class="stretched-link"> </a>
 
                 <img src="{% static 'assets/img/relationships.jpg' %}" class="img-fluid" alt="">
@@ -218,14 +217,13 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                                   <a href="https://youtu.be/zHAwuU4x72A" class="stretched-link"> </a>
+                  <a href="https://youtu.be/zHAwuU4x72A" class="stretched-link"> </a>
 
                 <img src="{% static 'assets/img/youtube.jpg' %}" class="img-fluid" alt="">
 
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Anesthesiologist</span>
+                <h4>How to let go</h4>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -235,12 +233,13 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="{% static 'assets/img/doctors/doctors-4.jpg' %}" class="img-fluid" alt="">
+                  <a href="https://www.marriage.com/advice/relationship/signs-of-an-unhealthy-relationship " class="stretched-link"> </a>
+
+                <img src="{% static 'assets/img/unhealthy rlship.jpg' %}" class="img-fluid h-100 w-100" alt="">
 
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Neurosurgeon</span>
+                <h4>Signs of Unhealthy Relationship</h4>
               </div>
             </div>
           </div><!-- End Team Member -->
