--- a/mentalChatbot/templates/mental_illness.html
+++ b/mentalChatbot/templates/mental_illness.html
@@ -44,7 +44,7 @@
     <div class="branding d-flex align-items-center">
 
       <div class="container position-relative d-flex align-items-center justify-content-end">
-        <a style="text-decoration: none" href="index.html" class="logo d-flex align-items-center me-auto">
+        <a style="text-decoration: none" href="{% url 'homepage' %}" class="logo d-flex align-items-center me-auto">
           <img src="{% static 'assets/img/logo1.png' %}" alt="">
           <h1 class="sitename">EduWell</h1>
         </a>
@@ -157,7 +157,6 @@
             <p>Understanding the causes of mental illness is crucial for effective prevention, early intervention and treatment.</p>
           </div>
         </div><!-- End Icon Box -->
-
 
 
       </div>
